# astra

./: 56-orbbec.rules  CMakeLists.txt  README.md
samples/: CMakeLists.txt
samples/c-api/: CMakeLists.txt
samples/c-api/IRReaderPoll/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/plugins/openni_sensor/: CMakeLists.txt
